2008-11-03  Richard Hult  <richard@imendio.com>

	* src/dh-search.c:
	* src/dh-window.c: Revert the padding changes.
	- Fix title updating when switching tabs.
	- Remove the close button on mac, it looks really strange.

2008-11-03  Richard Hult  <richard@imendio.com>

	* src/dh-main.c: Reindent.

2008-10-30  Richard Hult  <richard@imendio.com>

	* src/dh-search.c:
	* src/dh-window.c: Tweak paddings to try and make things look a
	bit better, might revert later.

2008-10-29  Richard Hult  <richard@imendio.com>

	* src/dh-window.c: Minor cleanups.

2008-10-28  Richard Hult  <richard@imendio.com>

	* src/dh-search.c (dh_search_new): Remove the extra frame and set
	the shadow on the scrolled windows instead, looks more consistent.

2008-10-28  Richard Hult  <richard@imendio.com>

	* src/dh-window.c: Clean up a bit, make the html view/content tab
	syncing work again, don't make the notebook tabs expand, remove
	unused code.

2008-10-28  Richard Hult  <richard@imendio.com>

	Bug 557795 – Add assistant/search plugin for VIM

	* misc/devhelp.vim: Add new, much improved version from Jannis
	Pohlmann.

2008-10-23  Carlos Garnacho  <carlos@imendio.com>

	* misc/devhelp.el: Add provide for devhelp.el.

2008-10-22  Richard Hult  <richard@imendio.com>

	Bug 557223 – segmentation fault on startup

	* src/ige-conf-gconf.c:
	* src/ige-conf-private.h:
	* src/ige-conf.c: Add back simple fallbacks for people with
	mis-configured gconf setups.

2008-10-12  Richard Hult  <richard@imendio.com>

	* src/dh-main.c: (main): Ignore -psn_* on quartz, which is added
	by Finder.
	
	* src/dh-util.c: (util_get_mac_data_dir): Point to the Resources
	directory inside the bundle.

	* src/dh-window.c: (window_populate): Use
	dh_util_build_data_filename.

2008-10-11  Richard Hult  <richard@imendio.com>

	* src/dh-util.c: (dh_util_build_data_filename): Pick up bundle
	location if executed from a bundle (still needs work to point to
	the right place).

2008-10-11  Richard Hult  <richard@imendio.com>
